--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/Gabox2k/autenticacion#readme",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "better-sqlite3": "^12.4.1",
     "cookie-parser": "^1.4.7",
     "db-local": "^3.1.0",
     "ejs": "^3.1.10",
